--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "mlukman/security-helper-bundle",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "A set of classes to simplify Symfony security",
     "type": "symfony-bundle",
     "require": {
@@ -9,6 +9,7 @@
         "google/recaptcha": "^1.3",
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-facebook": "^2.2",
+        "league/oauth2-github": "^3.1",
         "league/oauth2-google": "^4.0",
         "stevenmaguire/oauth2-keycloak": "^5.1",
         "symfony/console": "^6.1|^7.0",
